--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -63,13 +63,71 @@ input[type="text"].main-search {
     
 }
 
-/* Screen width	Smallest screen height	In use worldwide
-1024 px	768 px	3%
-1280 px	800 px	11%
-1360 px	768 px	2%
-1366 px	768 px	35%
-1440 px	900 px	6%
-1600 px	900 px	6%
-1680 px	1050 px	3%
-1920 px	1080 px	20%
-2560 px and up	1440 px	1% */
+
+.card {
+    overflow: hidden;
+}
+.card .card-image .beer-thumb {
+    object-fit: contain;
+    height: 245px;
+    padding-top: 5px;
+}
+
+.card .card-reveal p {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+}
+
+.card .card-reveal .card-title {
+    cursor: auto;
+}
+.card .card-reveal .card-close {
+    cursor: pointer;
+}
+
+.card .card-reveal.reveal {
+    /* display: block; */
+    transform: translateY(-100%);
+    transition: transform 1s;
+    /* overflow: hidden; */
+}
+
+.card .card-reveal {
+    transform: translateY(0%);
+    display: block;
+    transition: transform 1s;
+    /* overflow: hidden; */
+}
+
+
+
+
+
+
+/* MEDIA QUERIES */
+@media screen and (min-width: 993px){
+    
+    .card .card-content .card-title {
+        color: #fff;
+        width: 100%;
+        min-height: 48px;
+        font-size: 1rem;
+        font-weight: 900;
+        line-height: 1.2;
+    }
+}
+
+@media screen and (min-width: 640px) and (max-width: 992px){
+    .card .card-content .card-title {
+        min-height: 64px;
+    }
+}
+
+@media screen and (min-width: 601px) and (max-width: 639px) {
+    .card .card-content .card-title {
+        min-height: 96px;
+    }
+}
