--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -108,6 +108,30 @@ input[type="text"].main-search {
 .liked {
     color: #1b5e20;
 }
+
+#loader {
+    position: fixed;
+    z-index: 200;
+    top: 0;
+    background: rgba(3,3,3,0.5);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+#loader .spinner {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+
+.like-loader {
+    position: absolute;
+    width: 100%;
+    bottom: -14px;
+}
 .d-flex {
     display: flex;
 }
