--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -100,6 +100,25 @@ header #header-img picture img {
     padding-top: 5px;
 }
 
+.card .card-image .price {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 50px;
+    padding: 0 10px;
+    background: rgba(3,3,3,0.7);
+    color: #fff;
+    font-size: 2rem;
+    z-index: 100;
+}
+
+.card .card-image .price .price-label {
+    font-size: 1rem;
+    display: block;
+    margin-bottom: -10px;
+    
+}
+
 .card .card-reveal p {
     text-overflow: ellipsis;
     overflow: hidden;
@@ -118,6 +137,7 @@ header #header-img picture img {
 .card .card-reveal.reveal {
     transform: translateY(-100%);
     transition: transform 1s;
+    z-index: 200;
 }
 
 .card .card-reveal {
